Fix index underline color on Firefox

--- a/assets/pages/index/style.scss
+++ b/assets/pages/index/style.scss
@@ -69,6 +69,7 @@ header a:active {
 
 #post-list h2:hover {
   text-decoration: underline;
+  text-decoration-color: $color-link-hover;
 }
 
 .post-list-date {
